UPDATES: - Added multiple images for the home screen. - Added new RV for the home screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="our_partners">Our Partners</string>
     <string name="helplines">Helplines</string>
     <string name="references">References</string>
+    <string name="featured">Featured</string>
 </resources>
