UPDATES: - Added completed screen. - Added shared preferences to save app opened.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="minutes">minutes</string>
     <string name="activity_tracking_in_progress">Activity Tracking\nIn Progress…</string>
     <string name="activity_tracking_paused">Activity Tracking\nPaused…</string>
+    <string name="awesome_completion">Awesome Completion!</string>
+    <string name="back_to_activities">BACK TO ACTIVITIES</string>
 </resources>
