UPDATES: - Completed the progress tracker screen. - New table for the progress tracker. - New icons and images.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="activity_tracking_paused">Activity Tracking\nPaused…</string>
     <string name="awesome_completion">Awesome Completion!</string>
     <string name="back_to_activities">BACK TO ACTIVITIES</string>
+    <string name="most_tracked_activity">MOST TRACKED\nACTIVITY</string>
+    <string name="achievements">Achievements</string>
+    <string name="month">Month</string>
+    <string name="awards_progression">Awards Progression</string>
+    <string name="activities_tracked">ACTIVITIES\nTRACKED</string>
 </resources>
